grammars/rsc/test/corpus/menu_commands.txt
==========
Simple menu command — two levels
==========

/ip route print

---

(source_file
  (menu_command
    (menu_prefix)
    (identifier)
    (identifier)
    (identifier)))


==========
Menu command — one level
==========

/ip

---

(source_file
  (menu_command
    (menu_prefix)
    (identifier)))


==========
Menu command — multiple levels
==========

/interface bridge port add

---

(source_file
  (menu_command
    (menu_prefix)
    (identifier)
    (identifier)
    (identifier)
    (identifier)))


==========
Menu command — five levels
==========

/ip firewall filter add chain=input action=accept

---

(source_file
  (menu_command
    (menu_prefix)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (operator)
    (identifier)
    (identifier)
    (operator)
    (identifier)))
