grammars/rsc/test/corpus/named_params.txt
==========
Named param in menu command
==========

/ip route add gateway=10.0.0.1 distance=1

---

(source_file
  (menu_command
    (menu_prefix)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (operator)
    (literal
      (ip_address))
    (identifier)
    (operator)
    (literal
      (number))))


